--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">poison_frog</string>
     <string name="show_app_name">Poison Frog</string>
     <string name="type_food_name">음식 이름을 입력하세요.</string>
-
-
 </resources>
